# openvas-scanner

./: .clang-format  .dockerignore  .gitignore  .mergify.yml  .pontos-header-ignore  CHANGELOG.md  CHANGES  CHANGES-OLD  CMakeLists.txt  CONTRIBUTING.md  CONVENTIONAL-COMMITS.md  COPYING  COPYING.OpenSSL  ChangeLog  INSTALL  INSTALL.md  MANIFEST  Makefile  README  README.md  README_SSL  README_WINDOWS  SECURITY.md  TODO  UPGRADE_README  UPGRADE_WINDOWS  VERSION  VERSION.in  aclocal.m4  changelog.toml  check.sh  check_license_headers.bash  check_license_headers.sh  cliff.toml  configure  configure.in  flake.nix  getgit.cmake  getsvn.cmake  index.html  (+22 more)
doc/: man.sh  (+64 more)
misc/: CMakeLists.txt  README.txt  arglists.c  arglists.h  bpf_share.c  bpf_share.h  ftp_funcs.c  ftp_funcs.h  heartbeat.c  heartbeat.h  ids_send.c  ids_send.h  internal_com.h  ipc.c  ipc.h  ipc_openvas.c  ipc_openvas.h  ipc_openvas_tests.c  ipc_pipe.c  ipc_pipe.h  kb_cache.c  kb_cache.h  network.c  network.h  nvt_categories.h  nvt_qod.c  nvt_qod.h  openvas-krb5.c  openvas-krb5.h  pcap.c  pcap_openvas.h  pcap_tests.c  plugutils.c  plugutils.h  popen.c  popen.h  reporting.c  reporting.h  scan_id.c  scan_id.h  (+16 more)
nasl/: CMakeLists.txt  ChangeLog-pre-09-2009  README.txt  TODO  arc4.c  byteorder.h  capture_packet.c  capture_packet.h  charcnv.c  charset.h  exec.c  exec.h  genrand.c  hmacmd5.c  hmacmd5.h  iconv.c  iconv.h  lint.c  lint.h  md4.c  md4.h  md5.c  md5.h  nasl-lint.c  nasl.c  nasl.h  nasl_builtin_find_service.c  nasl_builtin_nmap.c  nasl_builtin_openvas_tcp_scanner.c  nasl_builtin_plugins.h  nasl_builtin_synscan.c  nasl_cert.c  nasl_cert.h  nasl_cmd_exec.c  nasl_cmd_exec.h  nasl_crypt_helper.c  nasl_crypto.c  nasl_crypto.h  nasl_crypto2.c  nasl_crypto2.h  (+66 more)
nasl/tests/: Makefile  README.md  README.txt  signed.nasl  signed.nasl.asc  test_blowfish.nasl  test_bn.nasl  test_crypt_data_aes.nasl  test_dh.nasl  test_dsa.nasl  test_hexstr.nasl  test_isotime.nasl  test_md.nasl  test_privkey.nasl  test_rsa.nasl  test_script_signing.sh  test_socket.nasl  testsuiteinit.nasl  testsuitesummary.nasl
nasl/tests/keys/: keypair.asc  (+1 more)
rust/: .gitignore  .rustfmt.toml  COPYING  Cargo.toml  Cross.toml  Makefile  README.md  Rocket.toml  build.rs  cross.Dockerfile  cross_aarch64.Dockerfile  flake.nix  readme.md  rust-toolchain.toml  typos.toml
rust/.cargo/: audit.toml
rust/api/: openapi.yml
rust/benches/: infisto_comparison.rs  interpreter.rs  nasl_syntax_parse.rs
rust/data/: service_definitions.json
rust/dep-graph/: Cargo.toml  README.md
rust/doc/: api.md  build.md  container-image-scanner-configuration.md  forking.md  openapi.yml  openvasd-osp-cmd-equivalence.md  overview.mmd  progress-calculation.md  reverse-sensor-openapi.yml
rust/examples/: GBCommunitySigningKey.asc  README.md  arp_request.nasl  control.nasl  discovery.json  double-fork2.nasl  error.nasl  error_inc.inc  forge_icmp_v6.nasl  forge_tcp_v6.nasl  get_kb_item.nasl  gss.nasl  hello.nasl  http2.nasl  if-assignment.nasl  packet_forgery.nasl  packet_forgery_icmp_ping.nasl  packet_forgery_igmp.nasl  packet_forgery_tcp_opts.nasl  packet_forgery_tcp_v6.nasl  packet_forgery_udp.nasl  packet_forgery_udp_v6.nasl  pem_to.nasl  scoping.nasl  service_definitions.json  sha256sums  snmp.nasl  ssh_netconf.nasl  ssh_test.nasl  tcp.nasl  telnet.nasl  udp.nasl  wmi-exec.nasl
rust/feed/: Cargo.toml  README.md
rust/feed-verifier/: Cargo.toml  README.md
rust/fuzz/: Cargo.toml
rust/infisto/: Cargo.toml  README.md
rust/json-sink/: Cargo.toml  README.md
rust/json-storage/: Cargo.toml  README.md
rust/migrations/: 20250711070445_init.sql  20251120114645_add_scanning_to_scans.sql  20260303134810_standardize-results.sql  20260313093612_remove_alive_methods-checks.sql
rust/models/: Cargo.toml
rust/nasl-builtin-cryptographic/: Cargo.toml  README.md  main
rust/nasl-builtin-description/: Cargo.toml  README.md
rust/nasl-builtin-host/: Cargo.toml
rust/nasl-builtin-http/: Cargo.toml
rust/nasl-builtin-http2/: Cargo.toml
rust/nasl-builtin-isotime/: Cargo.toml
rust/nasl-builtin-knowledge-base/: Cargo.toml  README.md
rust/nasl-builtin-misc/: Cargo.toml  README.md
rust/nasl-builtin-network/: Cargo.toml  README.md
rust/nasl-builtin-raw-ip/: Cargo.toml  README.md
rust/nasl-builtin-regex/: Cargo.toml  README.md
rust/nasl-builtin-ssh/: Cargo.toml
rust/nasl-builtin-std/: Cargo.toml  README.md
rust/nasl-builtin-string/: Cargo.toml
rust/nasl-builtin-utils/: Cargo.toml  README.md
rust/nasl-c-lib/: Cargo.toml  README.md  build.rs  install-gnu-lib.sh
rust/nasl-cli/: Cargo.toml  README.md
rust/nasl-interpreter/: Cargo.toml  README.md
rust/nasl-syntax/: Cargo.toml  README.md
rust/notus/: Cargo.toml
rust/nvtcache/: Cargo.toml  README.md
rust/openvas/: Cargo.toml
rust/openvasctl/: Cargo.toml  README.md
rust/openvasd/: Cargo.toml  README.md
rust/openvasd-tests/: Dockerfile  Dockerfile.target  Makefile  entrypoint.sh
rust/osp/: Cargo.toml  README.md
rust/plugin-scheduler/: Cargo.toml
rust/redis-sink/: Cargo.toml  README.md
rust/redis-storage/: Cargo.toml  README.md
rust/scanconfig/: Cargo.toml
rust/scanner-api/: Cargo.toml  api.md
rust/scanner-migrations/: 20250711070445_init.sql
rust/scannerctl/: Cargo.toml  README.md
rust/sensord/: Cargo.toml  README.md
rust/sink/: Cargo.toml  README.md
rust/sink-redis/: Cargo.toml
rust/smoketest/: Cargo.toml  Makefile  README.md  client_sample.pem  simple_scan_ssh_only.json
rust/src/: lib.rs  utils.rs
rust/storage/: Cargo.toml
rust/tests/: nasl_syntax_missing_input_validation.rs  nasl_syntax_parsing.rs
src/: CMakeLists.txt  alivedetection.c  alivedetection.h  alivedetection_tests.c  aliveservice.c  aliveservice.h  attack.c  attack.h  attack_tests.c  auth.c  auth.h  comm.c  comm.h  debug_utils.c  debug_utils.h  hosts.c  hosts.h  locks.c  log.c  log.h  macros.h  main.c  nasl_plugins.c  nes_plugins.c  ntp.c  ntp.h  ntp_11.c  ntp_11.h  openvas.c  openvas.h  openvas_log_conf.cmake_in  openvassd.c  openvassd_log_conf.cmake_in  otp.c  otp.h  otp_1_0.c  otp_1_0.h  oval_plugins.c  parser.c  piic.c  (+28 more)
(+2754 files in other folders)
